--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -597,6 +597,17 @@ table {
         height: auto;
         min-height: 200px;
     }
+
+    .list-container {
+        td {
+            padding: 4px 8px;
+            text-align: left;
+        }
+
+        tr.selected {
+            background-color: @selected-row-color;
+        }
+    }
 }
 
 #project-work-categorization,
