Note about displayed projects in assign to group dialog

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Categorization.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Categorization.cshtml
@@ -248,6 +248,11 @@
                                 <div id="projectForGroupPagination" class="text-center"></div>
                             </div>
                         </div>
+                        <div>
+                            <div class="alert alert-warning">
+                                @Localizer.Translate("SelectProjectForCreatingGroupNote", "Admin")
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
