Fix searching in assign to group dialog

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Categorization.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Categorization.cshtml
@@ -225,7 +225,7 @@
                                         @Localizer.Translate("MyProjects", "Admin")
                                     </div>
                                     <div class="col col-xs-12 col col-sm-10">
-                                        <form asp-action="ProjectsForGroupList" asp-controller="Project" method="get" class="project-search-form search-form form-inline">
+                                        <form asp-action="ProjectsForGroupList" asp-controller="Project" method="get" class="projectForGroup-search-form search-form form-inline">
                                             <div class="form-group">
                                                 <div class="search-input">
                                                     <input class="form-control search-value" name="search" placeholder=" " value="" />
