--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/KeyTable/KeyTable.cshtml
@@ -1,7 +1,12 @@
 ﻿@using ITJakub.Web.Hub.Areas.Admin.Models.Type
+@using Scalesoft.Localization.AspNetCore
+@using Scalesoft.Localization.Core.Util
 @using Vokabular.MainService.DataContracts.Contracts.Type
+
+@inject ILocalizationService Localizer
+
 @{
-    ViewBag.Title = "Administrace číselníků";
+    ViewBag.Title = Localizer.Translate("KeyTableTitle", "KeyTable", LocTranslationSource.File);
 }
 @section styles {
     <link asp-append-version="true" rel="stylesheet" href="~/Areas/Admin/css/ridics.project.css" />
@@ -11,26 +16,27 @@
     <script asp-append-version="true" src="~/Areas/Admin/js/composition-key-table-editor/ridics.project.key-table-editor.bundle.js"></script>
 }
 <div class="content-container keytable-container">
+    <h2>@Localizer.Translate("KeyTableTitle", "KeyTable", LocTranslationSource.File)</h2>
     <div class="row display-flex">
         <div class="col-xs-12 col-md-2 left-menu left-menu" id="left-menu">
             <div class="project-title">Název díla</div>
             <div class="list-group list-group-root" id="project-navigation">
-                    <a href="#" class="list-group-item key-table-editor-selection active" data-editor-type="@{@((int)KeyTableEditorType.Category)}">Category</a>
-                    <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.Genre)}">Genre</a>
-                    <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.Kind)}">Kind</a>
-                    <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.ResponsiblePerson)}">Responsible person</a>
-                    <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.ResponsiblePersonType)}">Responsible person type</a>
-                    <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.LiteraryOriginal)}">Literary Original</a>
-                    <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.OriginalAuthor)}">Original Author</a>
-                    <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int)KeyTableEditorType.Keyword)}">Keyword</a>
+                <a href="#" class="list-group-item key-table-editor-selection active" data-editor-type="@{@((int) KeyTableEditorType.Category)}">@Localizer.Translate("Category", "KeyTable", LocTranslationSource.File)</a>
+                <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int) KeyTableEditorType.Genre)}">@Localizer.Translate("Genre", "KeyTable", LocTranslationSource.File)</a>
+                <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int) KeyTableEditorType.Kind)}">@Localizer.Translate("Kind", "KeyTable", LocTranslationSource.File)</a>
+                <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int) KeyTableEditorType.ResponsiblePerson)}">@Localizer.Translate("ResponsiblePerson", "KeyTable", LocTranslationSource.File)</a>
+                <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int) KeyTableEditorType.ResponsiblePersonType)}">@Localizer.Translate("ResponsiblePersonType", "KeyTable", LocTranslationSource.File)</a>
+                <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int) KeyTableEditorType.LiteraryOriginal)}">@Localizer.Translate("LiteraryOriginal", "KeyTable", LocTranslationSource.File)</a>
+                <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int) KeyTableEditorType.OriginalAuthor)}">@Localizer.Translate("OriginalAuthor", "KeyTable", LocTranslationSource.File)</a>
+                <a href="#" class="list-group-item key-table-editor-selection" data-editor-type="@{@((int) KeyTableEditorType.Keyword)}">@Localizer.Translate("Keyword", "KeyTable", LocTranslationSource.File)</a>
             </div>
         </div>
 
-        <div class="hidden-xs hidden-sm col-md-1 vertical-splitter-control">
-            <button id="splitter-button" class="btn btn-default">
-                <span class="glyphicon glyphicon-menu-left"></span>
-            </button>
-        </div>
+        @*<div class="hidden-xs hidden-sm col-md-1 vertical-splitter-control">
+                <button id="splitter-button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-menu-left"></span>
+                </button>
+            </div>*@
 
         <div class="col-xs-12 col-md-8" id="project-layout-content">
             <div class="table-of-keys-content">
@@ -40,16 +46,22 @@
                         <div class="col-xs-12 col-md-9 selectable-list-div"></div>
                         <div class="hidden-xs hidden-sm col-md-3 crud-buttons-div">
                             <div class="btn-group-vertical">
-                                <button type="button" class="btn btn-default create-key-table-entry"><i class="fa fa-plus-square-o" aria-hidden="true"></i>
-                                    <span class="create-key-table-entry-description">Create table of keys entry</span></button>
-                                <button type="button" class="btn btn-default rename-key-table-entry"><i class="fa fa-pencil" aria-hidden="true"></i>
-                                    <span class="rename-key-table-entry-description">Rename table of keys entry</span></button>
-                                <button type="button" class="btn btn-default delete-key-table-entry"><i class="fa fa-trash-o" aria-hidden="true"></i>
-                                    <span class="delete-key-table-entry-description">Delete table of keys entry</span></button>
+                                <button type="button" class="btn btn-default create-key-table-entry">
+                                    <i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                                    <span class="create-key-table-entry-description">Create table of keys entry</span>
+                                </button>
+                                <button type="button" class="btn btn-default rename-key-table-entry">
+                                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                                    <span class="rename-key-table-entry-description">Rename table of keys entry</span>
+                                </button>
+                                <button type="button" class="btn btn-default delete-key-table-entry">
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                    <span class="delete-key-table-entry-description">Delete table of keys entry</span>
+                                </button>
                             </div>
                         </div>
                     </div>
-                    </div>
+                </div>
             </div>
             <div class="modal fade category-change-input-modal-dialog" role="dialog">
                 <div class="modal-dialog">
@@ -72,8 +84,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">Ok</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
                 </div>
@@ -95,17 +107,17 @@
                                     <p class="secondary-input-dialog-message"></p>
                                     <select class="responsible-type-selection">
                                         @{
-                                                <option value="@((int)ResponsibleTypeEnumContract.Unknown)">Unknown</option>
-                                                <option value="@((int)ResponsibleTypeEnumContract.Editor)">Editor</option>
-                                                <option value="@((int)ResponsibleTypeEnumContract.Kolace)">Collation</option>
-                                         }
-</select>
+                                            <option value="@((int) ResponsibleTypeEnumContract.Unknown)">@Localizer.Translate("Unknown", "KeyTable", LocTranslationSource.File)</option>
+                                            <option value="@((int) ResponsibleTypeEnumContract.Editor)">@Localizer.Translate("Editor", "KeyTable", LocTranslationSource.File)</option>
+                                            <option value="@((int) ResponsibleTypeEnumContract.Kolace)">@Localizer.Translate("Collation", "KeyTable", LocTranslationSource.File)</option>
+                                        }
+                                    </select>
                                 </div>
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">Ok</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
                 </div>
@@ -122,8 +134,8 @@
                             <textarea class="textarea-no-resize input-dialog-textarea" rows="1" cols="30"></textarea>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">Ok</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
                 </div>
@@ -140,7 +152,7 @@
                             <p class="info-dialog-message"></p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
                 </div>
@@ -157,8 +169,8 @@
                             <p class="confirmation-dialog-message"></p>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-default confirmation-ok-button" data-dismiss="modal">Ok</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default confirmation-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
                 </div>
@@ -183,15 +195,15 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">Ok</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">@Localizer.Translate("Close", "KeyTable", LocTranslationSource.File)</button>
+                            <button type="button" class="btn btn-default info-dialog-ok-button" data-dismiss="modal">@Localizer.Translate("Ok", "KeyTable", LocTranslationSource.File)</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
- <div class="row pagination-row-elements">
-  <div class="col-xs-12 text-center key-table-pagination"></div>
- </div>
+    <div class="row pagination-row-elements">
+        <div class="col-xs-12 text-center key-table-pagination"></div>
+    </div>
 </div>
