Add text type to project list

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -43,7 +43,7 @@
 <div class="content-container">
     <div class="row project-layout">
         <div class="left-menu" id="left-menu">
-            <div class="project-title">@Model.Name<br/><span class="text-type">@TextTypeLocalizer.TranslateTextType(Model.TextType)</span></div>
+            <div class="project-title">@Model.Name<br/><span class="text-type">@TextTypeLocalizer.TranslateTextTypeFull(Model.TextType)</span></div>
             <div class="list-group list-group-root" id="project-navigation">
                 <a href="#" class="list-group-item active" id="project-navigation-root">@Localizer.Translate("Project", "Admin")</a>
                 <div class="list-group">
