Adjust colors for Line loading bars

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/lib.loading-visualization.scss
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/lib.loading-visualization.scss
@@ -2,8 +2,8 @@
 @import "../lib/loading-visualization/src/colors.scss";
 
 $determinate_bordered_line_border:  #696969;
-$determinate_bordered_line_color:  #696969;
-$bordered_line_color:  #696969;
+$determinate_bordered_line_color:  #4A85C4;
+$bordered_line_color:  #4A85C4;
 $circles_color:  #696969;
 $bars_color:  #696969;
 $dots_color:  #696969;
