New panel in bibliography module for displaying project type icon

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Bibliography.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Bibliography.less
@@ -76,6 +76,22 @@ ul.bib-listing li.list-item .middle-panel .body .sub {
 ul.bib-listing li.list-item .middle-panel .body {
 }
 
+ul.bib-listing li.list-item .middle-right-panel {
+    padding: 1rem 0;
+    display: table-cell;
+    width: 50px;
+    vertical-align: top;
+
+    .body {
+        padding: 0 0.7rem;
+
+        img {
+            width: 32px;
+            height: 32px;
+        }
+    }
+}
+
 ul.bib-listing li.list-item .right-panel {
     float: none;
     width: 6rem;
