--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.RegExSearch.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.RegExSearch.less
@@ -393,8 +393,9 @@ input.regexsearch-checkbox {
 }
 
 .regex-searchbar-inputs {
-    display: block;
-    margin-right: 180px;
+    display: table-cell;
+    width: 100%;
+    vertical-align: top;
     padding-right: 10px;
 }
 
