--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.BibliographySearch.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.BibliographySearch.less
@@ -6,8 +6,9 @@
 }
 
 .searchbar-inputs {
-    display: block;
-    margin-right: 164px;
+    display: table-cell;
+    width: 100%;
+    vertical-align: top;
     padding-right: 10px;
 }
 
