--- a/UJCSystem/ITJakub.Web.Hub/Areas/CardFiles/Views/CardFiles/List.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/CardFiles/Views/CardFiles/List.cshtml
@@ -12,19 +12,17 @@
     ViewBag.Title = @Localizer.Translate("CardFilesList", "CardFiles");
 }
 
-
-
     <div id="cardFilesListHeader">
         <div id="cardFilesListSearchDiv" class="list-search-div">
-            <form role="form" class="form-horizontal">
-                <div class="form-group searchbar">
+            <form role="form">
+                <div class="searchbar">
+                    <div class="searchbar-inputs">
+                        <input type="text" class="form-control searchbar-input" id="searchbox" placeholder="@Localizer.Translate("Find", "CardFiles")..." style="max-width: 100%;" />
+                    </div>
                     <div class="searchbar-buttons">
                         <button id="searchButton" type="button" class="btn btn-default searchbar-button">
                             @Localizer.Translate("Search", "CardFiles")
                         </button>
-                    </div>
-                    <div class="searchbar-inputs">
-                        <input type="text" class="form-control searchbar-input" id="searchbox" placeholder="@Localizer.Translate("Find", "CardFiles")..." style="max-width: 100%;" />
                     </div>
                 </div>
             </form>
