--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1826,7 +1826,12 @@ table {
 
     .term-options {
         padding-right: 32px;
-        margin-bottom: 2em;
+        margin-bottom: 1em;
+    }
+    
+    .selected-terms-title {
+        font-size: 1.3em;   
+        margin-top: 0.3em;
     }
     
     .selected-term {
