--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1808,6 +1808,24 @@ table {
     }
 }
 
+#project-resource-terms {
+    .equal-row {
+        margin: 0;
+        display: flex;
+
+        .panel {
+            width: 100%;
+            height: 100%;
+            
+            .page-listing,
+            .body-content {
+                height: unset;
+                max-height: 55vh;
+            }
+        }
+    }
+}
+
 #addTermsDialog {    
     #termsList {
         height: 60vh;
