Term editor - improve alert in dialog, minor view improvements

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1819,8 +1819,7 @@ table {
             
             .page-listing,
             .body-content {
-                height: unset;
-                max-height: 55vh;
+                height: 55vh;
             }
         }
     }
@@ -1879,6 +1878,16 @@ table {
 
         &:hover {
             color: black;
+        }
+    }
+    
+    .alert-holder {
+        text-align: left;
+        margin: 0;
+        padding: 0;
+        
+        .alert {
+            margin: 0;
         }
     }
 }
