--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -574,6 +574,12 @@ table {
         }
     }
 
+    .categorization-panel {
+        .control-label {
+            padding-right: 0;
+        }
+    }
+    
     #work-categorization-literary-genre,
     #work-categorization-literary-kind {
         .button-float-right {
@@ -589,7 +595,7 @@ table {
         }
     }
 
-    #work-categorization-invalid-keyword-fail {
+    .work-categorization-invalid-keyword-fail {
         display: none;
     }
 
@@ -606,6 +612,29 @@ table {
 
         tr.selected {
             background-color: @selected-row-color;
+        }
+    }
+
+    .clearfix {
+        .col {
+            padding-right: 0;
+        }
+    }
+    .button-float-right {
+        margin-right: 15px;
+    }
+    
+    .not-filled-label {
+        margin-top: 7px;
+    }
+    
+    .alert {
+        text-align: left;
+    }
+    
+    #project-group-projects {
+        .btn {
+            margin-top: 1em;
         }
     }
 }
@@ -1807,8 +1836,4 @@ table {
             text-align: center;
         }
     }
-}
-
-.not-filled-label {
-    margin-top: 7px;
 }
