--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Terms.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Terms.cshtml
@@ -12,7 +12,7 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="panel-title">
-                                @Localization.Translate("Pages", "RidicsProject")
+                                @Localization.Translate("SelectPage", "Admin")
                             </div>
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-6">
                                 <div class="panel-title text-left">
-                                    @Localization.Translate("Terms", "Admin")
+                                    @Localization.Translate("TermsOnPage", "Admin")
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 panel-buttons text-right">
