Add user code description to the user profile and user edit views

--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUserRoles.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUserRoles.cshtml
@@ -48,6 +48,9 @@
                         <span id="specificUserCode">@Model.UserCode</span>
                     </div>
                 </div>
+                <div class="alert alert-info">
+                    @Localizer.Translate("UserCodeHelp", "Permission")
+                </div>
                 <div>
                     <button id="addGroupButton" class="btn btn-default permission-button">@Localizer.Translate("AssignToGroup", "Permission")</button>
                 </div>
