--- a/UJCSystem/ITJakub.Web.Hub/Views/Account/UserProfile/_UserCode.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Account/UserProfile/_UserCode.cshtml
@@ -16,6 +16,11 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <div class="col-md-offset-3 col-md-6">
+                            <div class="alert alert-info">@Localizer.Translate("UserCodeHelp", "Account")</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label asp-for="UserCode" class="col-md-3 control-label"></label>
                         <div class="col-md-6">
                             <input type="text" asp-for="UserCode" class="form-control" readonly="readonly" />
