--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUser.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUser.cshtml
@@ -55,6 +55,13 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <div class="col-md-offset-3 col-md-8">
+                                <div class="alert alert-info">
+                                    @Localizer.Translate("UserCodeHelp", "Permission")
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             @Html.LabelFor(m => m.FirstName, new { @class = "col-md-3 control-label" })
                             <div class="col-md-8">
                                 @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
