Improve term editor dialog layout and style

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/SubView/_TermCategories.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/SubView/_TermCategories.cshtml
@@ -8,7 +8,7 @@
     var termCategory = Model[i];
     @if (i % 2 == 0)
     {
-        @Html.Raw("<div class=\"row\">")
+        @Html.Raw("<div class=\"\">")
     }
     <div data-category-id="@termCategory.Id" class="col-xs-12 col-md-6 panel panel-default collapsible-panel">
         <div class="panel-heading">
