--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Terms.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Terms.cshtml
@@ -82,33 +82,45 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="term-options col-xs-6 col-sm-7 col-md-8">
-                            <div class="row">
-                                <div class="col-xs-6">
-                                    <select id="termCategoryFilter" class="form-control">
-                                        <option value="" selected="selected">@Localization.Translate("AllCategories", "Admin")</option>
-                                        @foreach (var category in Model.TermCategories)
-                                        {
-                                            <option value="@category.Id">@category.Name</option>
-                                        }
-                                    </select>
+                        <div class="col-xs-6 col-sm-7 col-md-8">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    @Localization.Translate("TermList", "Admin")
                                 </div>
-                                <div class="col-xs-6">
-                                    <input id="searchTerm" type="text" class="form-control" placeholder="@Localization.Translate("Search...", "Admin")"/>
-                                    <i class="fa fa-close reset-search-button"></i>
+                                <div class="panel-body">
+                                    <div class="row">
+                                        <div class="col-xs-5">
+                                            <select id="termCategoryFilter" class="form-control">
+                                                <option value="" selected="selected">@Localization.Translate("AllCategories", "Admin")</option>
+                                                @foreach (var category in Model.TermCategories)
+                                                {
+                                                    <option value="@category.Id">@category.Name</option>
+                                                }
+                                            </select>
+                                        </div>
+                                        <div class="col-xs-7">
+                                            <input id="searchTerm" type="text" class="form-control" placeholder="@Localization.Translate("Search...", "Admin")"/>
+                                            <i class="fa fa-close reset-search-button"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr/>
+                                <div id="termsList">
+                                    @await Html.PartialAsync("Resource/SubView/_TermCategories", Model.TermCategories, ViewData)
                                 </div>
                             </div>
                         </div>
-                        <div class="selected-terms-title col-xs-6 col-sm-5 col-md-4">
-                             @Localization.Translate("SelectedTerms", "Admin")                       
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div id="termsList" class="col-xs-6 col-sm-7 col-md-8">
-                            @await Html.PartialAsync("Resource/SubView/_TermCategories", Model.TermCategories, ViewData)
-                        </div>
-                        <div id="selectedTerms" class="col-xs-6 col-sm-5 col-md-4">
-                            
+                        <div class="col-xs-6 col-sm-5 col-md-4">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    @Localization.Translate("SelectedTerms", "Admin")
+                                </div>
+                                <div class="panel-body">
+                                    <div id="selectedTerms">
+                                        @*Generated content*@
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
