--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1818,11 +1818,17 @@ table {
         .panel {
             width: 100%;
             height: 100%;
-            
+
             .page-listing,
             .body-content {
                 height: 55vh;
             }
+        }
+    }
+
+    @media screen and (max-width: 1399px) {
+        .manage-terms-button {
+            white-space: normal;
         }
     }
 }
@@ -1843,16 +1849,14 @@ table {
         }
     }
 
-    .term-options {
-        padding-right: 32px;
-        margin-bottom: 1em;
+    #selectedTerms {
+        min-height: 170px;
     }
-    
-    .selected-terms-title {
-        font-size: 1.3em;   
-        margin-top: 0.3em;
+
+    hr {
+        margin: 0 0 10px 0;
     }
-    
+
     .selected-term {
         padding: 0.3em;
         border: 1px solid #ddd;
