Add missing CSS class to fix New Publication view after changes in LESS files

--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Publication/PublicationsNew.cshtml
@@ -40,7 +40,7 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-6">
-                            <div class="panel panel-default">
+                            <div class="panel panel-default collapsible-panel">
                                 <div class="panel-heading">
                                     <div class="collapse-icon">
                                         <a data-toggle="collapse" href="#publishToModules" aria-expanded="true">
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <div class="panel panel-default">
+                            <div class="panel panel-default collapsible-panel">
                                 <div class="panel-heading">
                                     <div class="collapse-icon">
                                         <a data-toggle="collapse" href="#snapshotInfo" aria-expanded="true">
