--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -579,7 +579,7 @@ table {
             padding-right: 0;
         }
     }
-    
+
     #work-categorization-literary-genre,
     #work-categorization-literary-kind {
         .button-float-right {
@@ -615,23 +615,28 @@ table {
         }
     }
 
+    #projectForGroupListContainer {
+        min-height: 300px;
+    }
+
     .clearfix {
         .col {
             padding-right: 0;
         }
     }
+
     .button-float-right {
         margin-right: 15px;
     }
-    
+
     .not-filled-label {
         margin-top: 7px;
     }
-    
+
     .alert {
         text-align: left;
     }
-    
+
     #project-group-projects {
         .btn {
             margin-top: 1em;
