--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_EditCategorizationButtons.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_EditCategorizationButtons.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Scalesoft.Localization.AspNetCore
 @inject ILocalizationService Localizer
 
-<div class="form-group">
+<div class="row">
     <div class="col-xs-12">
     <div class="project-form-bottom-buttons col-md-12">
         <div class="work-categorization-view-button-panel text-right">
