--- a/UJCSystem/ITJakub.Web.Hub/Views/Account/UserProfile/_UserCode.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Account/UserProfile/_UserCode.cshtml
@@ -1,5 +1,4 @@
-﻿@using ITJakub.Web.Hub.Constants
-@using Scalesoft.Localization.AspNetCore
+﻿@using Scalesoft.Localization.AspNetCore
 @model ITJakub.Web.Hub.Models.User.UserCodeViewModel
 @inject ILocalizationService Localizer
 
@@ -16,7 +15,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-3 col-md-6">
+                        <div class="col-md-12">
                             <div class="alert alert-info">@Localizer.Translate("UserCodeHelp", "Account")</div>
                         </div>
                     </div>
