--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUser.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUser.cshtml
@@ -48,17 +48,10 @@
                                 @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @readonly = true })
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" title="@Localizer.Translate("UserCodeHelp", "Permission")">
                             @Html.LabelFor(m => m.UserCode, new { @class = "col-md-3 control-label" })
                             <div class="col-md-8">
                                 @Html.TextBoxFor(m => m.UserCode, new { @class = "form-control", @readonly = true })
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-3 col-md-8">
-                                <div class="alert alert-info">
-                                    @Localizer.Translate("UserCodeHelp", "Permission")
-                                </div>
                             </div>
                         </div>
                         <div class="form-group">
