--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUserRoles.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/EditUserRoles.cshtml
@@ -43,13 +43,10 @@
                         <span class="detail-item-title">@Localizer.Translate("Email", "Permission", LocTranslationSource.File): </span>
                         <span id="specificUserEmail">@Model.Email</span>
                     </div>
-                    <div class="detail-item">
+                    <div class="detail-item" title="@Localizer.Translate("UserCodeHelp", "Permission")">
                         <span class="detail-item-title">@Localizer.Translate("UserCode", "Permission", LocTranslationSource.File): </span>
                         <span id="specificUserCode">@Model.UserCode</span>
                     </div>
-                </div>
-                <div class="alert alert-info">
-                    @Localizer.Translate("UserCodeHelp", "Permission")
                 </div>
                 <div>
                     <button id="addGroupButton" class="btn btn-default permission-button">@Localizer.Translate("AssignToGroup", "Permission")</button>
